code/kubes/nextcloud/nextcloud-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: nextcloud
  name: nextcloud-db
  labels:
    app: nextcloud
spec:
  replicas: 1
  selector:
    matchLabels:
      pod-label: nextcloud-db-pod
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        pod-label: nextcloud-db-pod
    spec:
      containers:
      - name: mysql
        image: mysql:8.0.28
        volumeMounts:
        - name: db-storage
          mountPath: /var/lib/mysql
          subPath: mysql-data
      volumes:
      - name: db-storage
        persistentVolumeClaim:
          claimName: nextcloud-shared-storage-claim
---
apiVersion: v1
kind: Service
metadata:
  namespace: nextcloud
  name: nextcloud-db
  labels:
    app: nextcloud
spec:
  clusterIP: None
  selector:
    pod-label: nextcloud-db-pod
  ports:
  - protocol: TCP
    port: 3306
